fixed spacing on messages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -124,7 +124,7 @@ body {
 }
 
 #messages li blockquote {
-  margin: 4px 4em 1em;
+  margin: 1em 4em;
 }
 
 #userlist {
